# kid_shogi

./: .gitignore  Cargo.toml  README.md  TODO.md  match.py
src/: abstract_game.rs  kids_shogi.rs  main.rs  mcts.rs  neuro.rs  rpc.rs  rules.rs  static_server.rs  strategy.rs
src/kids_shogi/: tests.rs
src/web/: game.js  index.html  style.css
web/: README  board.html
