[package]
name = "kid_shogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder = "0.2.0"
arrayvec = "0.7.2"
rand = "0.8.5"
nn = "0.1.6"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
